Fixes: NB#172606 - Input method indicators are truncated in status bar
RevBy: TrustMe

Details: The style file was missing theming for this particular indicator

--- a/themes/style/default.css
+++ b/themes/style/default.css
@@ -135,6 +135,11 @@ StatusIndicatorAnimationStyle:icon {
     minimum-size: 1.4mm 1.8mm;
     maximum-size: 1.4mm 1.8mm;
 }
+StatusIndicatorAnimationStyle#InputMethodStatusIndicator {
+    preferred-size: 24 18;                           
+    minimum-size: 24 18;
+    maximum-size: 24 18;
+}
 
 StatusIndicatorLabelStyle {
     margin-left: 0;
